# apix

./: .gitignore  .travis.yml  HISTORY.rst  README.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
apix/: __main__.py  commands.py  diff.py  explore.py  helpers.py  logger.py
apix/libtools/: advanced.py  basic.py  intermediate.py  libmaker.py  nailgun.py  satellite.yaml  typed.py
apix/parsers/: apipie.py  apipie_old.py  test.py
libs/templates/advanced/: advanced.template  class.template  method.template
libs/templates/basic/: basic.template  class.template  method.template
libs/templates/nailgun/: entities.py.template  entity_class.template  entity_method.template
libs/templates/typed/: class.template  main.template  method.template
libs/templates/typed_advanced/: class.template  ff_class.template  main.template  method.template
tests/: test_diff.py  test_explore.py  test_helpers.py
tests/APIs/test123/: 1.3.yaml  2.1.yaml  good-diff.yaml
tests/libtools/: test_nailgun.py
